# cvox

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: deps.cmake
cvox/: CMakeLists.txt
cvox/include/cvox/: cvox.hpp
cvox/include/cvox/core/: application.hpp  context.hpp  core.hpp  engine.hpp  entry_point.hpp  namespaced_id.hpp
cvox/include/cvox/rendering/: render_context.hpp
cvox/include/cvox/window/: window.hpp
cvox/src/core/: context.cpp  engine.cpp  namespaced_id.cpp
cvox/src/rendering/: render_context.cpp
cvox/src/shaders/: shared.inl  trace.glsl
cvox/src/window/: window.cpp
patches/: daxa-swapchain-max.patch
sandbox/: CMakeLists.txt
sandbox/src/: main.cpp
sandbox/src/shaders/: compute.glsl  main.glsl  shared.inl
